testsuite/poke.pkl/neg-diag-1.pk
/* { dg-do compile } */

var a = -[1,2,3]; /* { dg-error "invalid operand.*\n.*" } */
